@@ -7,7 +7,7 @@ baseUrl = 'https://api.malsync.moe'
 
 def get_slugs(mal_id, site=''):
     slugs = []
-    if site in ['Gogoanime', 'Zoro']:
+    if site in ['Gogoanime', 'Zoro', 'animepahe']:
         response = client.request(f'{baseUrl}/mal/anime/{mal_id}')
         if response:
             resp = json.loads(response)['Sites'].get(site)
@@ -15,3 +15,16 @@ def get_slugs(mal_id, site=''):
                 for key in resp.keys():
                     slugs.append(resp[key].get('url'))
     return slugs
+
+
+def get_title(mal_id, site=''):
+    if site in ['Gogoanime', 'Zoro', 'animepahe']:
+        response = client.request(f'{baseUrl}/mal/anime/{mal_id}')
+        if response:
+            resp = json.loads(response)['Sites'].get(site)
+            if resp:
+                for key in resp.keys():
+                    title = resp[key].get('title')
+                    if title:
+                        return title
+    return None
