@@ -1,3 +1,10 @@
+Changelog v5.2.46 (2025-09-14):
+- Added Migration Setting
+- Fixed AnimePahe anime searching
+- Fixed clearart and clearlogo for Episode Meta
+- Fixed Batch Sources for Easy Debrid
+- Fixed incorrect label with New Search
+
 Changelog v5.2.45 (2025-09-10):
 - Small Fix with Migration Script
 
